Trivial refactor: replace with `List.of()`